styles.css
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap');
 :root{
     --primary-color:#B2B7FF  ; 
     --gray-color:#687280;
     --of-white:#F3F4F6;

 }
 body{
    font-family: 'Roboto Mono', monospace;
 }

 .container{
     padding-left: 1rem;
     padding-right: 1rem; 
 }
 .container-centre { 
     max-width: width 600px;
     margin:auto;

 }
 .link{
      text-decoration:none ;
      padding:0.5rem 1rem;
 }
 .primary-link{
   background-color: var(--primary-color);
   border-radius: 0.5rem;
   color:white;
 } 
 .secondary-link{
  color:var(--primary-color);
  border:1px
  solid var(--primary-color)
 }
 hr{
     margin:2rem 0rem
 }
 .lists-non-bullet{
     list-style:none ;
 }
 .list-item-inline{
  display:inline;
  padding:0rem 0.5rem;
 }
 .navigation{
     background-color: var(--primary-color);
     color:white;
     padding:1rem;
     border-bottom-left-radius: 1rem;
     
 }
 .navigation .nav-brand{
    font-weight: bold;
    font-size: 2rem;

 
 }
 .navigation .nav-pills{
      text-align: right ;
 }
 
 .navigation .link {
    color:white;
}
 .navigation .link-active{
     font-weight: bold;
 }
/* header */
 .hero{
    padding:2rem;
}
.hero .hero-img{
    
    max-width:350px; ;
    display:block;
    margin:auto;
}
.hero .heading{
    color: var(--gray-color);
    padding-top:1rem;
}
.heading-inverted{
    color:var(--primary-color);
    font-weight: bold;
}
/* section */
.section{
    padding:2rem;
}
.section h1{
    text-align: center;
    
}
.ow{
    background-color: var(--of-white);
}
/* footer */
 .footer{
     background-color: var(--primary-color);
     padding: 2rem 1rem;
     text-align: center;
     color:white;
     border-top-right-radius: 1rem;
 }
 .footer .footer-header{
     font-weight: bold;
     font-size: large;
     
 }
 .footer .link{
    color:white ;
 }
 .footer ul{
     padding-inline-start: 0px;
 }
/* css-tricks.com (to master css) */

